--- a/package.json
+++ b/package.json
@@ -9,10 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.7.2",
+    "base-64": "^1.0.0",
+    "body-parser": "^1.20.2",
+    "expo": "^51.0.14",
+    "expo-calendar": "^13.0.5",
+    "expo-device": "~6.0.2",
+    "expo-image-picker": "~15.0.5",
+    "expo-notifications": "^0.28.9",
+    "expo-permissions": "^14.4.0",
+    "expo-sms": "~12.0.1",
+    "express": "^4.19.2",
+    "firebase": "^10.12.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-datetime-picker": "^6.0.1",
+    "react-dom": "18.2.0",
+    "react-native": "^0.74.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
