--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-datetime-picker": "^6.0.1",
     "react-dom": "18.2.0",
     "react-native": "^0.74.2",
+    "react-native-email": "^2.1.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
