--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
     "expo": "^51.0.0",
     "expo-calendar": "~13.0.5",
     "expo-device": "~6.0.2",
+    "expo-firebase-core": "^6.0.0",
     "expo-google-app-auth": "~8.3.0",
-    "expo-image-picker": "~15.0.6",
+    "expo-image-picker": "~15.0.7",
     "expo-notifications": "~0.28.9",
     "expo-random": "~14.0.1",
     "expo-sms": "~12.0.1",
     "expo-updates": "~0.25.18",
     "expo-web-browser": "~13.0.3",
     "express": "^4.19.2",
-    "firebase": "^10.12.2",
+    "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-email": "^2.1.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
