--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
@@ -21,26 +21,26 @@
     "axios": "^1.7.2",
     "base-64": "^1.0.0",
     "body-parser": "^1.20.2",
-    "expo": "^51.0.0",
+    "expo": "~51.0.28",
     "expo-calendar": "~13.0.5",
     "expo-device": "~6.0.2",
     "expo-image-picker": "~15.0.7",
-    "expo-notifications": "~0.28.9",
+    "expo-notifications": "^0.28.16",
     "expo-random": "~14.0.1",
     "expo-sms": "~12.0.1",
-    "expo-updates": "~0.25.18",
+    "expo-updates": "^0.25.23",
     "expo-web-browser": "~13.0.3",
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-email": "^2.1.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
   },
