--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "Church-Admin",
-    "slug": "Church-Admin",
+    "name": "Church Admin",
+    "slug": "Church Admin",
     "version": "1.0.0",
     "orientation": "default",
-    "icon": "./assets/Icon.png",
-    "userInterfaceStyle": "light",
+    "icon": "./assets/icon.jpeg",
+    "userInterfaceStyle": "dark",
     "splash": {
-      "image": "./assets/Icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/Splash.jpeg",
+      "resizeMode": "cover",
+      "backgroundColor": "rgba(30, 30, 30, 1)"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -19,8 +19,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/Icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/icon.jpeg",
+        "backgroundColor": "rgba(30, 30, 30, 1)"
       },
       "package": "com.joshmills.ChurchAdmin"
     },
