--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-notifications": "^0.28.19",
     "expo-random": "~14.0.1",
     "expo-sms": "~12.0.1",
+    "expo-status-bar": "~1.12.1",
     "expo-updates": "^0.25.27",
     "expo-web-browser": "~13.0.3",
     "express": "^4.19.2",
@@ -36,14 +37,15 @@
     "react-datetime-picker": "^6.0.1",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-btr": "^2.2.1",
     "react-native-email": "^2.1.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-status-bar": "~1.12.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
