--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,8 @@
 {
   "build": {
     "preview": {
+      "cli.appVersionSource": "project",
+      "distribution": "store",
       "android": {
         "buildType": "apk"
       }
