--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "expo-calendar": "~13.0.5",
     "expo-device": "~6.0.2",
     "expo-image-picker": "~15.0.7",
-    "expo-notifications": "^0.28.19",
+    "expo-network": "~6.0.1",
+    "expo-notifications": "~0.28.19",
+    "expo-permissions": "^14.4.0",
     "expo-random": "~14.0.1",
     "expo-sms": "~12.0.1",
     "expo-status-bar": "~1.12.1",
@@ -45,9 +47,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
     "react-native-svg": "15.2.0",
-    "expo-network": "~6.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
