--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.2",
     "expo": "~51.0.39",
     "expo-calendar": "~13.0.5",
+    "expo-dev-client": "~4.0.29",
     "expo-device": "~6.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-network": "~6.0.1",
@@ -48,9 +49,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
-    "expo-dev-client": "~4.0.29"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
